[package]
name = "pprefox-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
parking_lot = "0.12.3"
registry = "1.3.0"
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "sync"] }
utfx = "0.1.0"
uuid = { version = "1.11.0", features = ["v4"] }
